--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,6 +29,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Install flake8
+      run: |
+        python -m pip install flake8
+
     - name: Lint
       run: |
         flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
